# nj-crashes

./: .crashes-rc  .dockerignore  .gitignore  2020_Uniform_Crime_Report.xlsx  404.html  All Roads.ipynb  CLAUDE.md  CNAME  DVX-MIGRATION.md  Dockerfile  FAUQStats2010.xml  FAUQStats2014.xml  FAUQStats2017.xml  FAUQStats2021.xml  FAUQStats2022.xml  Grove Crashes.ipynb  Hudson Crashes.ipynb  Municipal_Boundaries_of_NJ.geojson.dvc  NJ 2018 SHP GeoJSON.ipynb  NJSP SRIs.ipynb  NJSP summary PDFs.ipynb  README.md  ROADMAP.md  State County Boundaries.ipynb  cmp-mps.ipynb  colors.py  crash-homicide-cmp.ipynb  dvc.yaml  gha.py  gsmo.yml  index.html  map.html  milepost-shapes.ipynb  nj-crime-stats.ipynb  nj_crashes.db  njcrimn.htm  njsp-plots.ipynb  njsp.db  njsp.pqt  njsp_plots.py  (+15 more)
.dvc/: config
.dvx/: config.yml
404/: index.html
api/: .gitignore  d1-import.dvc  package.json  pnpm-lock.yaml  wrangler.toml
assets/: TileLayer-18wSuUig.js  TileLayer-CFX2bwGM.js  TileLayer-DIT1vCDg.js  TileLayer-DXidIuKI.js  diffs--gRRuO9w.js  diffs-BfeMrtLV.js  diffs-BkEmJrwA.js  diffs-XpNTOMbh.js  index-4hz-TsV3.js  index-B8RKRFWQ.js  index-B8b7c3Gk.css  index-BMQXlgnu.js  index-Bce6ZbGL.css  index-BszD-Sf6.js  index-BxY7A17M.css  index-DAlFMcH4.js  index-DU5FzSvB.js  index-DjmOQLpl.js  index-OAE9OmFM.js  index-basic-BN6Bpqu3.js  index-basic-CFKY6eeP.js  index-basic-DriU3Ye_.js  index-basic-nappOJNH.js
c/: index.html
cells-api/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
census/: __init__.py  build.py  fetch.py  harmonize.py
crime/: 2001_crime_report.pdf.dvc  paths.py  (+37 more)
(+45364 files in other folders)
